--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -10,6 +10,17 @@
   text-align: center;
 }
 
+.name ul {
+  display: flex;
+  width: 150px;
+  margin: auto;
+  padding: auto;
+  list-style-type: none;
+  text-align: center;
+}
+.ul {
+  width: 150px; 
+}
 .form {
   margin: 0 auto;
   width: 70%;
@@ -18,7 +29,6 @@
 
 .form__group {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 15px;
 }
 
@@ -39,7 +49,7 @@
 .form__input--text input,
 .form__input--textarea textarea {
   padding: 10px;
-  width: 600px;
+  width: 150px;
   border: 1px solid #ddd;
   border-radius: 3px;
 
