--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -15,6 +15,20 @@
   width: 70%;
 }
 
+.name ul {
+ display: flex;
+ margin: auto;
+ padding: auto;
+ list-style-type: none; 
+}
+
+.tel ul {
+ display: flex;
+ margin: auto;
+ padding: auto;
+ list-style-type: none; 
+}
+
 .confirm-table {
   border: 1px solid #ddd;
 }
@@ -37,7 +51,7 @@
 }
 
 .confirm-table__text input {
-  width: 100%;
+  width: 400%;
   outline: none;
   border: none;
 }
