--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,82 +1,88 @@
-
 .contact-form__content {
-  margin: 0 auto;
-  padding: 30px 15px;
-  max-width: 1230px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    max-width: 1230px;
 }
 
 .contact-form__heading {
-  margin-bottom: 40px;
-  text-align: center;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 .name ul {
-  display: flex;
-  max-width: 50px;
-  margin: 10px;
-  padding: auto;
-  list-style-type: none;
-  text-align: left;
+    display: flex;
+    max-width: 50px;
+    margin: 10px;
+    padding: auto;
+    list-style-type: none;
+    text-align: left;
 }
 .tel ul {
-  display: flex;
-  width: 50px; 
-  list-style-type: none;
+    display: flex;
+    width: 50px;
+    list-style-type: none;
 }
 .form {
-  margin: 0 auto;
-  width: 70%;
-  text-align: center;
+    margin: 0 auto;
+    width: 70%;
+    /* text-align: center; */
 }
 
 .form__group {
-  display: flex;
-  margin-bottom: 15px;
+    display: flex;
+    margin-bottom: 15px;
 }
 
 .form__label--required {
-  margin-left: 5px;
-  padding: 4px 6px;
-  border-radius: 3px;
-  background: #fafafa;
-  color: #aaa;
+    margin-left: 5px;
+    padding: 4px 6px;
+    border-radius: 3px;
+    background: #fafafa;
+    color: #aaa;
 }
 
 .form__error {
-  height: 20px;
-  color: #ff0000;
-  text-align: left;
+    height: 20px;
+    color: #ff0000;
+    text-align: left;
 }
 
 .form__input--text input,
 .form__input--textarea textarea {
-  padding: 10px;
-  width: 150px;
-  border: 1px solid #ddd;
-  border-radius: 3px;
+    padding: 10px;
+    width: 150px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
 
-  appearance: none;
+    appearance: none;
 }
 
 .form__input--text input {
-  height: 40px;
+    height: 40px;
 }
 
 .form__input--textarea textarea {
-  height: 180px;
+    height: 180px;
+}
+
+.form-check {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 4px;
 }
 
 .form__button {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 
 .form__button-submit {
-  padding: 10px;
-  width: 30%;
-  height: 50px;
-  border: none;
-  border-radius: 3px;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
+    padding: 10px;
+    width: 30%;
+    height: 50px;
+    border: none;
+    border-radius: 3px;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
 }
